# CodeMorph

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: codemorph.yml
benchmarks/: benchmark_suite.json  eval_harness.py
benchmarks/examples/: celery_tasks.py  flask_app.py  orm_code.py  pandas_code.py  tensorflow_code.py  unittest_code.py
codemorph/: cli.py  extractor.py  loop.py  models.py  parser.py  planner.py  reporter.py  sandbox.py  scorer.py
example/flask_app/: app.py
example/flask_app/tests/: test_app.py
scripts/: publish.sh
tests/: test_parser.py  test_planner.py  test_reporter.py  test_sandbox.py  test_scorer.py
