[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codemorph"
version = "1.0.0"
description = "Intent-Preserving Code Migration Agent"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "docker>=7.0.0",
    "jinja2>=3.1.0",
    "anthropic>=0.18.0",
    "google-genai>=0.1.0",
    "openai>=1.10.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
codemorph = "codemorph.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["codemorph*"]
